################################################################################
#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

190521 Martin Raden :
 * IntaRNA/AccessibilityVrna :
   - calc_ensemble_free_energy() :
   - getPfScale() :
   - fillByConstraints() :
   - fillByRNAup() : obsolete and not conform to new VRNA API
 * bin/CommandLineParsing :
   + check for noSeed+mode=S and throw error

190418 Martin Raden :
 + IntaRNA/PredictorMfeSeedOnly : predicts only seed interactions
 * bin/CommandLineParsing :
   + mode=S : predicting seeds only
   + personality=IntaRNAseed : enabling mode=S

190414 Martin Raden :
 * bin/CommandLineParsing :
   * bugfix: helix constraints checks only done for model = B
   + mode : renamed predMode
   - predMode : renamed to mode
   * NumberParameter :
   * CharParameter :
     * def value now non-constant to be changeable in constructor 
   * constructor() :
     - variable init now non-dynamic
     + explicit en-bloc default update for each personality
     + report of default changes via VLOG

190412 Martin Raden :
 * IntaRNA/Interaction :
   * dotBracket() :
     * bugfix: full string generation produced wrong tails

190411 Martin Raden :
 * bin/CommandLineParsing :
   + link to github pages for further documentation

190409 Martin Raden :
 * IntaRNA/InteractionEnergy :
   + energyWithDangles : whether or not dangling end contributions are to be 
     considered for the overall energy computation
   * getE() :
   * getE_contributions() :
   * getE_multi() :
     + consideration of energyWithDangles parameter
   * getE_multi() :
     + bugfix: helix-end terms were missing
 * IntaRNA/InteractionEnergy* :
   * constructor() :
     + energyWithDangles handling
 * bin/CommandLineParsing :
   + energyNoDangles : whether or not dangling end terms are considered
   * getEnergyHandler() :