@@ -11,9 +11,10 @@ SUBDIRS = src perl tests doc .
 install-exec-hook:
 	cd $(DESTDIR)$(bindir); \
 	$(LN_S) -f IntaRNA$(EXEEXT) IntaRNAseed$(EXEEXT); \
+	$(LN_S) -f IntaRNA$(EXEEXT) IntaRNAsTar$(EXEEXT); \
 	$(LN_S) -f IntaRNA$(EXEEXT) IntaRNAhelix$(EXEEXT); \
 	$(LN_S) -f IntaRNA$(EXEEXT) IntaRNAduplex$(EXEEXT); \
-	$(LN_S) -f IntaRNA$(EXEEXT) IntaRNAup$(EXEEXT);
+	$(LN_S) -f IntaRNA$(EXEEXT) IntaRNAexact$(EXEEXT);
 
 ################################################################
 # doxygen
